<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/material_dynamic_neutral60"
             tools:context=".DepositFragment" android:layout_gravity="center_vertical">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/switchRadioGroup">

        <RadioButton
                android:text="@string/checking_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkingSwitch"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:textColor="#FBFBFB"
                android:button="@null"
                android:background="@drawable/switch_selector"
                android:padding="10dp"/>

        <RadioButton
                android:text="@string/savings_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/savingsSwitch"
                android:layout_gravity="right|top"
                android:textSize="16sp"
                android:textColor="#F8F6F6"
                android:button="@null"
                android:background="@drawable/switch_selector"
                android:padding="10dp" android:layout_marginTop="20dp"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_balance"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_gravity="center|top|left"
            android:id="@+id/currentBalance"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balanceDisplay"
            android:layout_gravity="center"
            android:layout_marginBottom="165dp"
            android:textSize="20sp"
            android:textColor="#FAF7F7"/>
    <TextView
            android:id="@+id/pendingBalanceDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="135dp"
            android:textColor="#FAF7F7"
            android:textSize="16sp"
            android:text=""/>
    <TextView
            android:text="@string/deposit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/depositLabel"
            android:layout_marginBottom="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            android:textColor="#F6F4F4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/depositAmount"
            android:layout_gravity="center" android:textSize="20sp" android:textColor="#F4F1F1"/>
    <Button
            android:text="@string/deposit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/depositSubmit"
            android:layout_gravity="center"
            android:layout_marginTop="175dp"/>
</FrameLayout>
